--- a/templates/index.html
+++ b/templates/index.html
@@ -22,6 +22,11 @@
         <h2 class="section__image__desc"></h2>
     </div>
 
+    <div class="wrapper">
+        <div class="section__download"><h3>DOWNLOAD</h3></div>
+        <a href="/" class="section__tryagain"><h3>TRY AGAIN</h3></a>
+    </div>
+    
     <script src="{{ url_for('static',filename='js/app.js') }}"></script>
 </body>
 </html>
