--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -39,6 +39,7 @@ body{
     background: #C8F6E0;
     box-shadow: 0px 0px 60px rgba(0, 0, 0, 0.1);
     font-family: ArchivoBlack;
+    opacity: 0%;
 }
 
 /* .section__input:hover{
